<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".survey.HealthStatusActivity" >

    <LinearLayout
        android:id="@+id/linearView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select as many of the symptoms as apply to you"
            android:textSize="24sp"
            android:fontFamily="@font/airbnb_cereal_bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="If you don't have any of these symptoms, there's no need for you to do anything right now. If you develop any of these symptoms, check them on this app and book a free test immediately."
            android:fontFamily="@font/airbnb_cereal_book"
            android:textSize="15dp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewCough"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:padding="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkBoxContinuousCough"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:buttonTint="@color/recovered"
                        android:fontFamily="@font/airbnb_cereal_medium"
                        android:text="A new continuous cough" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/continuous_cough_desc" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewTemperature"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkBoxTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:buttonTint="@color/recovered"
                        android:fontFamily="@font/airbnb_cereal_medium"
                        android:text="A high temperature (fever)" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/high_temperature_desc" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewTaste"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/checkBoxTaste"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:buttonTint="@color/recovered"
                        android:fontFamily="@font/airbnb_cereal_medium"
                        android:text="A change to your sense of smell or taste" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/change_taste_desc" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnContinues"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/main_page_button_bg"
                android:fontFamily="@font/airbnb_cereal_medium"
                android:text="Continues"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnDontHave"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnb_cereal_medium"
                android:text="@string/i_don_t_have_any_of_these_symptoms"
                android:textAllCaps="false"
                android:textColor="#03A9F4"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>